--- a/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
+++ b/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
@@ -1,68 +1,78 @@
 <ion-header>
-  <ion-toolbar color="primary">
-      <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
-          <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
-      </ion-buttons>
-      <ion-title color="light">ស្ថានភាពក្រុមហ៊ុន</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
+            <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
+        </ion-buttons>
+        <ion-title color="light">ស្ថានភាពក្រុមហ៊ុន</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="main-container ion-padding-top">
-      <strong class="ion-margin-start">ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
-      <ion-row *ngIf="taxPerMonths.length > 0" class="ion-margin-top">
-          <ion-col class="ion-no-padding ion-text-center" size="2">
-              <div class="ion-margin-top border-bottom">
-                  <h6 class="table_header">ខែ</h6>
-              </div>
-              <div class="ion-margin-top border-bottom" *ngFor="let month of arrayMonths">
-                  <h6>{{ month }}</h6>
-              </div>
-          </ion-col>
-          <ion-col class="ion-no-padding" size="10">
-                      <ion-slides mode="md" scrollbar="true">
-                          <ion-slide>
-                              <ion-row class="w-100-p">
-                                  <ion-col class="ion-no-padding ion-text-start" size="6">
-                                      <div class="ion-margin-top ion-padding-start border-bottom">
-                                          <h6 class="table_header">ចំណូល (រៀល)</h6>
-                                      </div>
-                                      <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let item of taxPerMonths">
-                                          <h6>{{ item.revenue ? (item.revenue  | number) : '...'}}</h6>
-                                      </div>
-                                  </ion-col>
-                                  <ion-col class="ion-no-padding ion-text-start" size="6">
-                                      <div class="ion-margin-top ion-padding-start border-bottom">
-                                          <h6 class="table_header">ចំណាយ (រៀល)</h6>
-                                      </div>
-                                      <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let item of taxPerMonths">
-                                          <h6>{{ item.spending ? (item.spending | number) : '...' }}</h6>
-                                      </div>
-                                  </ion-col>
-                              </ion-row>
-                          </ion-slide>
-                          <ion-slide>
-                              <ion-row class="w-100-p">
-                                  <ion-col class="ion-no-padding ion-text-start" size="6">
-                                      <div class="ion-margin-top ion-padding-start border-bottom">
-                                          <h6 class="table_header">ប្រាក់ពន្ធបង់រួច(រៀល)</h6>
-                                      </div>
-                                      <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let item of taxPerMonths">
-                                          <h6>{{ item.taxPaidAmount ? (item.taxPaidAmount | number) : '...' }}</h6>
-                                      </div>
-                                  </ion-col>
-                                  <ion-col class="ion-no-padding ion-text-start" size="6">
-                                      <div class="ion-margin-top ion-padding-start border-bottom" >
-                                          <h6 class="table_header">ផ្សេងៗ</h6>
-                                      </div>
-                                      <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let item of taxPerMonths">
-                                          <h6>{{ item.others ? item.others : '...' }}</h6>
-                                      </div>
-                                  </ion-col>
-                              </ion-row>
-                          </ion-slide>
-                      </ion-slides>
-          </ion-col>
-      </ion-row>
-  </div>
+    <div class="main-container ion-padding-top">
+        <strong class="ion-margin-start">ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
+        <ion-row *ngIf="taxPerMonths.length > 0" class="ion-margin-top">
+            <ion-col class="ion-no-padding ion-text-center" size="2">
+                <div class="ion-margin-top border-bottom">
+                    <h6 class="table_header">ខែ</h6>
+                </div>
+                <div class="ion-margin-top border-bottom" *ngFor="let month of arrayMonths">
+                    <h6>{{ month }}</h6>
+                </div>
+            </ion-col>
+            <ion-col class="ion-no-padding" size="10">
+                <ion-slides mode="md" scrollbar="true">
+                    <ion-slide>
+                        <ion-row class="w-100-p">
+                            <ion-col class="ion-no-padding ion-text-start" size="6">
+                                <div class="ion-margin-top ion-padding-start border-bottom">
+                                    <h6 class="table_header">ចំណូល (រៀល)</h6>
+                                </div>
+                                <div class="ion-margin-top ion-padding-start border-bottom"
+                                    *ngFor="let item of taxPerMonths">
+                                    <h6>{{ item.revenue ? (item.revenue  | number) : '...'}}</h6>
+                                </div>
+                            </ion-col>
+                            <ion-col class="ion-no-padding ion-text-start" size="6">
+                                <div class="ion-margin-top ion-padding-start border-bottom">
+                                    <h6 class="table_header">ចំណាយ (រៀល)</h6>
+                                </div>
+                                <div class="ion-margin-top ion-padding-start border-bottom"
+                                    *ngFor="let item of taxPerMonths">
+                                    <h6>{{ item.spending ? (item.spending | number) : '...' }}</h6>
+                                </div>
+                            </ion-col>
+                        </ion-row>
+                    </ion-slide>
+                    <ion-slide>
+                        <ion-row class="w-100-p">
+                            <ion-col class="ion-no-padding ion-text-start" size="6">
+                                <div class="ion-margin-top ion-padding-start border-bottom">
+                                    <h6 class="table_header">ប្រាក់ពន្ធបង់រួច(រៀល)</h6>
+                                </div>
+                                <div class="ion-margin-top ion-padding-start border-bottom"
+                                    *ngFor="let item of taxPerMonths">
+                                    <h6>{{ item.taxPaidAmount ? (item.taxPaidAmount | number) : '...' }}</h6>
+                                </div>
+                            </ion-col>
+                            <ion-col class="ion-no-padding ion-text-start" size="6">
+                                <div class="ion-margin-top ion-padding-start border-bottom">
+                                    <h6 class="table_header">ផ្សេងៗ</h6>
+                                </div>
+                                <div class="ion-margin-top ion-padding-start border-bottom"
+                                    *ngFor="let item of taxPerMonths">
+                                    <h6>{{ item.others ? item.others : '...' }}</h6>
+                                </div>
+                            </ion-col>
+                        </ion-row>
+                    </ion-slide>
+                </ion-slides>
+            </ion-col>
+        </ion-row>
+        <!-- loading -->
+        <ion-row *ngIf="taxPerMonths.length === 0" class="ion-margin-top ion-margin-start">
+            <ion-col size="12" *ngFor="let month of arrayMonths">
+                <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+            </ion-col>
+        </ion-row>
+    </div>
 </ion-content>
