--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -12,87 +12,82 @@
     <div class="main-container">
         <ion-grid *ngIf="moc" class="ion-no-padding">
             <ion-row>
-                    <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
-                    <p class="ion-margin-start">{{ moc.mocNumber }}</p>
+                <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
+                <p class="ion-margin-start">{{ moc.mocNumber }}</p>
             </ion-row>
             <ion-row>
-                    <strong>ចុះថ្ងៃទី :</strong>
-                    <p class="ion-margin-start">{{ moment(moc.notedDate).format('DD-MM-YYYY') }}</p>
+                <strong>ចុះថ្ងៃទី :</strong>
+                <p class="ion-margin-start">{{ moment(moc.notedDate).format('DD-MM-YYYY') }}</p>
             </ion-row>
             <ion-row>
-                    <strong>ដើមទុនចុះបញ្ជី :</strong>
-                    <p class="ion-margin-start">{{ moc.capital | number }} <strong>រៀល</strong></p>
+                <strong>ដើមទុនចុះបញ្ជី :</strong>
+                <p class="ion-margin-start">{{ moc.capital | number }} <strong>រៀល</strong></p>
             </ion-row>
             <ion-row>
-                    <strong>ប្រភេទ :</strong>
-                    <p class="ion-margin-start">{{ companyTypeInKhmer[moc.companyType] }}</p>
+                <strong>ប្រភេទ :</strong>
+                <p class="ion-margin-start">{{ companyTypeInKhmer[moc.companyType] }}</p>
             </ion-row>
             <ion-row>
-                    <strong>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</strong>
-                    <p class="ion-margin-start">{{ moment(moc.annualTranscriptMaintenanceDate).format('DD-MM-YYYY') }}</p>
+                <strong>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</strong>
+                <p class="ion-margin-start">{{ moment(moc.annualTranscriptMaintenanceDate).format('DD-MM-YYYY') }}</p>
             </ion-row>
             <ion-row>
-                    <strong>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
-                    <p class="ion-margin-start">{{ moc.mocUsernameLogin }}</p>
+                <strong>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                <p class="ion-margin-start">{{ moc.mocUsernameLogin }}</p>
             </ion-row>
             <ion-row>
-                    <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
-                    <p class="ion-margin-start">{{ moc.mocPasswordLogin }}</p>
+                <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                <p class="ion-margin-start">{{ moc.mocPasswordLogin }}</p>
             </ion-row>
         </ion-grid>
+        <!-- loading -->
         <ion-grid *ngIf="!moc" class="ion-no-padding">
-            <ion-row>
-                    <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
             </ion-row>
-            <ion-row>
-                    <strong>ចុះថ្ងៃទី :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>ចុះថ្ងៃទី :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 60%"></ion-skeleton-text>
             </ion-row>
-            <ion-row>
-                    <strong>ដើមទុនចុះបញ្ជី :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>ដើមទុនចុះបញ្ជី :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 60%"></ion-skeleton-text>
             </ion-row>
-            <ion-row>
-                    <strong>ប្រភេទ :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>ប្រភេទ :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 60%"></ion-skeleton-text>
             </ion-row>
-            <ion-row>
-                    <strong>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
             </ion-row>
-            <ion-row>
-                    <strong>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 40%"></ion-skeleton-text>
             </ion-row>
-            <ion-row>
-                    <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
-                    <p class="ion-margin-start">...</p>
+            <ion-row class="ion-margin-top">
+                <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                <ion-skeleton-text class="ion-margin-start" animated style="width: 40%"></ion-skeleton-text>
             </ion-row>
         </ion-grid>
         <!-- PDF section  -->
         <div class="Pdf-file">
             <strong>ទាញយកឯកសារជា PDF :</strong>
-            <div  *ngIf="docs">
+            <div *ngIf="docs && !isFetching">
                 <ion-card class="doc-card">
                     <ion-row *ngIf="docs.moc_certificate">
                         <ion-col size="3">
-                            <ion-icon (click)="onClickDownload(docs.moc_certificate, 'moc_certificate')"
-                                color="primary" 
-                                class="pdf-icon" 
-                                name="document-attach">
+                            <ion-icon (click)="onClickDownload(docs.moc_certificate, 'moc_certificate')" color="primary"
+                                class="pdf-icon" name="document-attach">
                             </ion-icon>
                         </ion-col>
                         <ion-col>
                             <p>1. វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម</p>
                         </ion-col>
                         <ion-col size="2">
-                            <ion-icon
-                                (click)="onClickDownload(docs.moc_certificate, 'moc_certificate')"
-                                color="primary"
-                                size="large"
-                                name="download"
-                                mode="md">
+                            <ion-icon (click)="onClickDownload(docs.moc_certificate, 'moc_certificate')" color="primary"
+                                size="large" name="download" mode="md">
                             </ion-icon>
                         </ion-col>
                     </ion-row>
@@ -101,21 +96,15 @@
                     <ion-row *ngIf="docs.business_extract">
                         <ion-col size="3">
                             <ion-icon (click)="onClickDownload(docs.business_extract, 'business_extract')"
-                                color="primary" 
-                                class="pdf-icon" 
-                                name="document-attach">
+                                color="primary" class="pdf-icon" name="document-attach">
                             </ion-icon>
                         </ion-col>
                         <ion-col>
                             <p>2. សម្រង់ក្រុមហ៊ុន</p>
                         </ion-col>
                         <ion-col size="2">
-                            <ion-icon
-                                (click)="onClickDownload(docs.business_extract, 'business_extract')"
-                                color="primary"
-                                size="large"
-                                name="download"
-                                mode="md">
+                            <ion-icon (click)="onClickDownload(docs.business_extract, 'business_extract')"
+                                color="primary" size="large" name="download" mode="md">
                             </ion-icon>
                         </ion-col>
                     </ion-row>
