--- a/src/app/pages/home/document-inventory/document-inventory.page.scss
+++ b/src/app/pages/home/document-inventory/document-inventory.page.scss
@@ -2,6 +2,11 @@ ion-content {
     .main-container {
         padding: 50px 15px 0 15px;
 
+        .loading-box {
+            height: 70px;
+            background-color: #f0f0f0;
+        }
+
         .Pdf-file {
             // margin-top: 0px;
 
