--- a/src/app/pages/home/requests-page/requests-page.page.html
+++ b/src/app/pages/home/requests-page/requests-page.page.html
@@ -27,5 +27,42 @@
 				</ion-col>
 			</ion-row>
 		</ion-grid>
+		<!-- loading -->
+		<ion-grid *ngIf="isFetching">
+			<ion-row>
+				<ion-col size="6">
+					<ion-card class="card-loading">
+						<ion-card-header color="primary"></ion-card-header>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
+					</ion-card>
+				</ion-col>
+				<ion-col size="6">
+					<ion-card class="card-loading">
+						<ion-card-header color="primary"></ion-card-header>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
+					</ion-card>
+				</ion-col>
+				<ion-col size="6">
+					<ion-card class="card-loading">
+						<ion-card-header color="primary"></ion-card-header>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
+					</ion-card>
+				</ion-col>
+				<ion-col size="6">
+					<ion-card class="card-loading">
+						<ion-card-header color="primary"></ion-card-header>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
+						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
+					</ion-card>
+				</ion-col>
+			</ion-row>
+		</ion-grid>
 	</div>
 </ion-content>
