--- a/src/app/pages/tax-calculation/general-tax/general-tax.page.html
+++ b/src/app/pages/tax-calculation/general-tax/general-tax.page.html
@@ -3,7 +3,7 @@
 		<ion-buttons (click)="backTaxCalculation()" class="ion-padding-horizontal" slot="start">
 			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
 		</ion-buttons>
-		<ion-title color="light">ការគណនាពន្ធប្រចាំខែ</ion-title>
+		<ion-title color="light">ការគណនាពន្ធទូទៅ</ion-title>
 	</ion-toolbar>
 </ion-header>
 
