--- a/src/app/pages/tax-calculation/tax-calculation.page.html
+++ b/src/app/pages/tax-calculation/tax-calculation.page.html
@@ -3,7 +3,7 @@
 		<ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
 			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
 		</ion-buttons>
-		<ion-title color="light">ការគណនាពន្ធប្រចាំខែ</ion-title>
+		<!-- <ion-title color="light">ការគណនាពន្ធប្រចាំខែ</ion-title> -->
 	</ion-toolbar>
 </ion-header>
 
@@ -20,7 +20,7 @@
 					</ion-label>
 				</div>
 			</ion-card>
-			<ion-card>
+			<ion-card (click)="goToCalculator('salary-tax')">
 				<div class="content-wrapper  ion-text-center">
 					<div>
 						<ion-icon name="calculator-outline"></ion-icon>
