--- a/src/app/pages/tax-calculation/general-tax/general-tax.page.html
+++ b/src/app/pages/tax-calculation/general-tax/general-tax.page.html
@@ -14,19 +14,19 @@
 		</div>
 		<div class="ion-margin-top">
 			<form class="tax-calculation-form ion-padding-horizontal"  [formGroup]="taxCalculationForm">
-				<ion-label position="floating">ប្រាក់ចំណូលក្រុមហ៊ុន៖</ion-label>
+				<ion-label position="floating">ប្រាក់ចំណូលក្រុមហ៊ុន</ion-label>
 				<ion-item>
 					<ion-input type="number" placeholder="0 រៀល" formControlName="revenue"></ion-input>
 				</ion-item>
-				<ion-label position="floating">ចំណាយដែលមានវិក័យបត្រអាករសរុប៖</ion-label>
+				<ion-label position="floating">ចំណាយដែលមានវិក័យបត្រអាករសរុប</ion-label>
 				<ion-item>
 					<ion-input type="number" placeholder="0 រៀល" formControlName="expendWithInvoiceTotal"></ion-input>
 				</ion-item>
-				<ion-label position="floating">ចំណាយលើជួលចលទ្រព្យ និងអចលទ្រព្យ៖</ion-label>
+				<ion-label position="floating">ចំណាយលើជួលចលទ្រព្យ និងអចលទ្រព្យ</ion-label>
 				<ion-item>
 					<ion-input type="number" placeholder="0 រៀល" formControlName="expendOnRenting"></ion-input>
 				</ion-item>
-				<ion-label position="floating">ចំណាយលើសេវាកម្មនៃបុគ្គលមិនមែនក្រុមហ៊ុន៖</ion-label>
+				<ion-label position="floating">ចំណាយលើសេវាកម្មនៃបុគ្គលិកមិនមែនក្រុមហ៊ុន</ion-label>
 				<ion-item>
 					<ion-input type="number" placeholder="0 រៀល" formControlName="expendOnOutsideService"></ion-input>
 				</ion-item>
