--- a/src/app/pages/tax-calculation/general-tax/general-tax.page.html
+++ b/src/app/pages/tax-calculation/general-tax/general-tax.page.html
@@ -14,21 +14,21 @@
 		</div>
 		<div class="ion-margin-top">
 			<form class="tax-calculation-form ion-padding-horizontal"  [formGroup]="taxCalculationForm">
-				<ion-label position="floating">ប្រាក់ចំណូលក្រុមហ៊ុន</ion-label>
+				<ion-label position="floating">ប្រាក់ចំណូលក្រុមហ៊ុន*</ion-label>
 				<ion-item>
-					<ion-input type="number" placeholder="0 រៀល" formControlName="revenue"></ion-input>
+					<ion-input type="number" placeholder="0 រៀល" formControlName="revenue" min="0"></ion-input>
 				</ion-item>
 				<ion-label position="floating">ចំណាយដែលមានវិក័យបត្រអាករសរុប</ion-label>
 				<ion-item>
-					<ion-input type="number" placeholder="0 រៀល" formControlName="expendWithInvoiceTotal"></ion-input>
+					<ion-input type="number" placeholder="0 រៀល" formControlName="expendWithInvoiceTotal" min="0"></ion-input>
 				</ion-item>
 				<ion-label position="floating">ចំណាយលើជួលចលទ្រព្យ និងអចលទ្រព្យ</ion-label>
 				<ion-item>
-					<ion-input type="number" placeholder="0 រៀល" formControlName="expendOnRenting"></ion-input>
+					<ion-input type="number" placeholder="0 រៀល" formControlName="expendOnRenting" min="0"></ion-input>
 				</ion-item>
 				<ion-label position="floating">ចំណាយលើសេវាកម្មនៃបុគ្គលិកមិនមែនក្រុមហ៊ុន</ion-label>
 				<ion-item>
-					<ion-input type="number" placeholder="0 រៀល" formControlName="expendOnOutsideService"></ion-input>
+					<ion-input type="number" placeholder="0 រៀល" formControlName="expendOnOutsideService" min="0"></ion-input>
 				</ion-item>
 				<div>
 					<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
@@ -38,28 +38,30 @@
 			</form>
 		</div>
 		<!-- Result of calculation -->
-		<div class="ion-text-center ion-margin-top">
-			<strong>លទ្ធផលនៃការគណនាប្រាក់ពន្ធ</strong>
-		</div>
-		<div>
-			<ion-card class="result-card ion-no-margin">
-				<ion-card-content class="ion-no-padding">
-					<ion-list class="result-list ion-no-padding" lines="none">
-						<ion-item>
-							<ion-label>ប្រាក់រំដោះពន្ធលើប្រាក់ចំណូល ៖</ion-label>
-						</ion-item>
-						<ion-item>
-							<ion-label>អាករលើតម្លៃបន្ថែម ៖</ion-label>
-						</ion-item>
-						<ion-item>
-							<ion-label>ពន្ធកាត់ទុកលើការជូល ១០% ៖</ion-label>
-						</ion-item>
-						<ion-item>
-							<ion-label>ពន្ធកាត់ទុកលើការសេវាកម្ម ១៥% ៖</ion-label>
-						</ion-item>
-					</ion-list>
-				</ion-card-content>
-			</ion-card>
+		<div *ngIf="calucationResults">
+			<div class="ion-text-center ion-margin-top">
+				<strong>លទ្ធផលនៃការគណនាប្រាក់ពន្ធ</strong>
+			</div>
+			<div class="ion-margin-bottom">
+				<ion-card class="result-card ion-no-margin">
+					<ion-card-content class="ion-no-padding">
+						<ion-list class="result-list ion-no-padding" lines="none">
+							<ion-item>
+								<ion-label>ប្រាក់រំដោះពន្ធលើប្រាក់ចំណូល ៖ {{calucationResults.incomeTax}}</ion-label>
+							</ion-item>
+							<ion-item>
+								<ion-label>អាករលើតម្លៃបន្ថែម ៖ {{calucationResults.valueAddedTax}}</ion-label>
+							</ion-item>
+							<ion-item>
+								<ion-label>ពន្ធកាត់ទុកលើការជូល ១០% ៖ {{calucationResults.rentingTax}}</ion-label>
+							</ion-item>
+							<ion-item>
+								<ion-label>ពន្ធកាត់ទុកលើការសេវាកម្ម ១៥% ៖ {{calucationResults.serviceTax}}</ion-label>
+							</ion-item>
+						</ion-list>
+					</ion-card-content>
+				</ion-card>
+			</div>
 		</div>
 	</div>
 </ion-content>
