--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,7 @@
     --ion-color-success-shade: #242424;
     --ion-color-success-tint: #3e3e3e;
 
-    --ion-color-warning: #ffffff;
+    --ion-color-warning: #FF9900;
     --ion-color-warning-rgb: 255, 255, 255;
     --ion-color-warning-contrast: #000000;
     --ion-color-warning-contrast-rgb: 0, 0, 0;
