--- a/src/app/pages/tax-calculation/general-tax/general-tax.page.scss
+++ b/src/app/pages/tax-calculation/general-tax/general-tax.page.scss
@@ -36,6 +36,7 @@ ion-content {
         }
 
         .result-card {
+            --ion-background-color: var(--ion-color-primary);
             margin-top: 5px;
             
             .result-list {
