--- a/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
+++ b/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
@@ -11,53 +11,118 @@
   <div class="main-container">
 		<div class="ion-margin-top">
 			<form class="tax-calculation-form ion-padding-horizontal" [formGroup]="taxCalculationForm">
-				<div>
-					<ion-label position="floating">ប្រាក់បៀវត្សប្រចាំខែ</ion-label>
-					<ion-item>
-						<ion-input type="number" placeholder="0 រៀល" formControlName="salary" required></ion-input>
-					</ion-item>
-				</div>
-				<div class="ion-margin-top">
-					<ion-label position="floating">អត្ថប្រយោជន៍បន្ថែម</ion-label>
-					<ion-item>
-						<ion-input type="number" placeholder="0 រៀល" formControlName="extraSalary"></ion-input>
-					</ion-item>
-				</div>
-				<div class="ion-margin-top">
-					<ion-label position="floating">សហព័ទ្ធ ( ប្តី ឬប្រពន្ធ )</ion-label>
-					<ion-row>
-						<ion-col class="ion-no-padding padding-right" size="6">
-							<ion-button (click)="radioButtonCLick()" [fill]="!isHad? 'outline' : 'solid'" class="w-100-p">
-								<ion-label>មាន</ion-label>
-							</ion-button>
-						</ion-col>
-						<ion-col class="ion-no-padding padding-left" size="6">
-							<ion-button (click)="radioButtonCLick()" [fill]="isHad? 'outline' : 'solid'" class="w-100-p">
-								<ion-label>គ្មាន</ion-label>
-							</ion-button>
-						</ion-col>
-					</ion-row>
-				</div>
-				<div class="ion-margin-top">
-					<ion-label>ចំនួនកូនក្នុងបន្ទុក</ion-label>
-					<ion-row>
-						<div class="icon-wrapper">
-							<ion-icon (click)="childrenDecrese()" color="primary" name="remove-circle"></ion-icon>
-						</div>
-						<ion-item class="ion-margin-start last">
-							<ion-input type="number" placeholder="0" formControlName="children"></ion-input>
+				<div class="ion-padding-bottom">
+					<div>
+						<ion-label position="floating">ប្រាក់បៀវត្សប្រចាំខែ</ion-label>
+						<ion-item>
+							<ion-input type="number" placeholder="0 រៀល" formControlName="salary" required></ion-input>
 						</ion-item>
-						<div class="icon-wrapper ion-margin-start">
-							<ion-icon (click)="childrenIncrease()" color="primary" name="add-circle"></ion-icon>
-						</div>
-					</ion-row>
+					</div>
+					<div class="ion-margin-top">
+						<ion-label position="floating">អត្ថប្រយោជន៍បន្ថែម</ion-label>
+						<ion-item>
+							<ion-input type="number" placeholder="0 រៀល" formControlName="extraSalary"></ion-input>
+						</ion-item>
+					</div>
+					<div class="ion-margin-top">
+						<ion-label position="floating">សហព័ទ្ធ ( ប្តី ឬប្រពន្ធ )</ion-label>
+						<ion-row>
+							<ion-col size="3">
+								<ion-button (click)="radioButtonCLick()" [fill]="!isHad? 'outline' : 'solid'" class="w-100-p btn-radio">
+									<ion-label>មាន</ion-label>
+								</ion-button>
+							</ion-col>
+							<ion-col size="3">
+								<ion-button (click)="radioButtonCLick()" [fill]="isHad? 'outline' : 'solid'" class="w-100-p btn-radio">
+									<ion-label>គ្មាន</ion-label>
+								</ion-button>
+							</ion-col>
+						</ion-row>
+					</div>
+					<div class="ion-margin-top">
+						<ion-label>ចំនួនកូនក្នុងបន្ទុក</ion-label>
+						<ion-row>
+							<div class="icon-wrapper">
+								<ion-icon (click)="childrenDecrese()" color="primary" name="remove-circle"></ion-icon>
+							</div>
+							<ion-item class="ion-margin-start last">
+								<ion-input type="number" placeholder="0" formControlName="children"></ion-input>
+							</ion-item>
+							<div class="icon-wrapper ion-margin-start">
+								<ion-icon (click)="childrenIncrease()" color="primary" name="add-circle"></ion-icon>
+							</div>
+						</ion-row>
+					</div>
 				</div>
 				<div class="ion-margin-top">
-					<ion-button color="primary" type="submit" class="w-100-p btn-calculator">
-						<ion-label color="light">គណនាពន្ធ</ion-label>
-					</ion-button>
+					<ion-row>
+						<ion-col class="ion-no-padding ion-padding-end" size="5">
+							<ion-button type="reset" fill="outline" class="w-100-p btn-calculation" (click)="reset()">
+								<ion-label>កំណត់ឡើងវិញ</ion-label>
+							</ion-button>
+						</ion-col>
+						<ion-col class="ion-no-padding" size="7">
+							<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
+								<ion-label color="light">គណនាពន្ធ</ion-label>
+							</ion-button>
+						</ion-col>
+					</ion-row>
 				</div>
 			</form>
+		</div>
+		<!-- Result of calculation -->
+		<div class="ion-padding-horizontal">
+			<div class="ion-text-center ion-margin-top">
+				<strong>លទ្ធផលនៃការគណនាពន្ធ</strong>
+			</div>
+			<div class="ion-margin-bottom">
+				<ion-card class="result-card ion-no-margin ion-padding-vertical">
+					<ion-card-content class="ion-no-padding">
+						<ion-list class="result-list ion-no-padding" lines="none">
+							<ion-item>
+								<ion-col>
+									<ion-label color="light">ពន្ធលើប្រាក់បៀវត្ស ៖</ion-label>
+									<!-- <ion-label color="light">
+										<strong>
+											{{calucationResults.incomeTax | number}} រៀល
+										</strong>
+									</ion-label> -->
+								</ion-col>
+							</ion-item>
+							<ion-item>
+								<ion-col>
+									<ion-label color="light">ពន្ធលើអត្ថប្រយោជន៍បន្ថែម ៖</ion-label>
+									<!-- <ion-label color="light">
+										<strong>
+											{{calucationResults.valueAddedTax | number}} រៀល
+										</strong>
+									</ion-label> -->
+								</ion-col>
+							</ion-item>
+							<!-- <ion-item>
+								<ion-col>
+									<ion-label color="light">អត្រាពន្ធ ៖</ion-label>
+									<ion-label color="light">
+										<strong>
+											{{calucationResults.rentingTax | number}} រៀល
+										</strong>
+									</ion-label>
+								</ion-col>
+							</ion-item>
+							<ion-item>
+								<ion-col>
+									<ion-label color="light">ពន្ធកាត់ទុកលើការសេវាកម្ម ១៥% ៖</ion-label>
+									<ion-label color="light">
+										<strong>
+											{{calucationResults.serviceTax | number}} រៀល
+										</strong>
+									</ion-label>
+								</ion-col>
+							</ion-item> -->
+						</ion-list>
+					</ion-card-content>
+				</ion-card>
+			</div>
 		</div>
   </div>
 </ion-content>
