--- a/src/app/pages/tax-calculation/salary-tax/salary-tax.page.scss
+++ b/src/app/pages/tax-calculation/salary-tax/salary-tax.page.scss
@@ -8,7 +8,7 @@ ion-content {
 
         .tax-calculation-form {
             margin-top: 5px;
-            // border: 1px solid;
+            // border-bottom: 1px solid;
 
             .icon-wrapper {
                 margin-top: 8px;
@@ -51,16 +51,35 @@ ion-content {
                 height: 50px;
                 --border-radius: 5px;
 
-                &.no-active {
-                    --border-color: #888686;
-                    --color: #888686;
-                    --opacity: 1;
+                // &.no-active {
+                //     --border-color: #888686;
+                //     --color: #888686;
+                //     --opacity: 1;
+                // }
+
+                &.btn-radio {
+                    --border-radius: 25px;
                 }
     
                 &.btn-calculator {
                     ion-label {
                         // font-size: 18px;
                         font-weight: bold;
+                    }
+                }
+            }
+        }
+
+        .result-card {
+            --ion-background-color: var(--ion-color-primary);
+            margin-top: 5px;
+            
+            .result-list {
+                ion-item {
+                    margin: 0;
+                    
+                    ion-label {
+                        margin: 0;
                     }
                 }
             }
