--- a/src/app/pages/home/requests-page/requests-page.page.html
+++ b/src/app/pages/home/requests-page/requests-page.page.html
@@ -3,18 +3,18 @@
 		<ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
 			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
 		</ion-buttons>
-		<ion-title color="light">បញ្ជីពាក្យស្នើរ</ion-title>
+		<ion-title color="light">បញ្ជីពាក្យស្នើរ{{ headerTitle }}</ion-title>
 	</ion-toolbar>
 </ion-header>
 
 <ion-content>
 	<ion-progress-bar *ngIf="isFetching" type="indeterminate"></ion-progress-bar>
 	<div class="main-container">
-		<ion-grid *ngIf="!isFetching || requests.length > 0">
+		<ion-grid *ngIf="!isFetching && requests.length > 0">
 			<ion-row>
 				<ion-col *ngFor="let item of requests" size="6">
 					<ion-card>
-						<ion-card-header color="primary">
+						<ion-card-header [color]="currentCardHeaderColor">
 							<ion-card-title color="light" class="ion-text-start">
 								{{ item.status }}
 								<ion-icon (click)="alertConfrim(item._id)" class="trash-icon ion-float-end" color="danger" name="trash" mode="md"></ion-icon>
@@ -30,33 +30,9 @@
 		<!-- loading -->
 		<ion-grid *ngIf="isFetching">
 			<ion-row>
-				<ion-col size="6">
+				<ion-col *ngFor="let item of loadingCardNumber" size="6">
 					<ion-card class="card-loading">
-						<ion-card-header color="primary"></ion-card-header>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
-					</ion-card>
-				</ion-col>
-				<ion-col size="6">
-					<ion-card class="card-loading">
-						<ion-card-header color="primary"></ion-card-header>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
-					</ion-card>
-				</ion-col>
-				<ion-col size="6">
-					<ion-card class="card-loading">
-						<ion-card-header color="primary"></ion-card-header>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
-						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
-					</ion-card>
-				</ion-col>
-				<ion-col size="6">
-					<ion-card class="card-loading">
-						<ion-card-header color="primary"></ion-card-header>
+						<ion-card-header [color]="currentCardHeaderColor"></ion-card-header>
 						<ion-skeleton-text class="ion-margin-top" animated style="width: 80%"></ion-skeleton-text>
 						<ion-skeleton-text class="ion-margin-top" animated style="width: 60%"></ion-skeleton-text>
 						<ion-skeleton-text class="ion-margin-top" animated style="width: 40%"></ion-skeleton-text>
@@ -65,4 +41,20 @@
 			</ion-row>
 		</ion-grid>
 	</div>
+	<ion-fab vertical="bottom" horizontal="start" slot="fixed">
+		<ion-fab-button>
+			<ion-icon name="arrow-forward-circle"></ion-icon>
+		</ion-fab-button>
+		<ion-fab-list side="end">
+			<ion-fab-button (click)="filter('pending')">
+				<ion-icon size="large" name="ellipsis-horizontal"></ion-icon>
+			</ion-fab-button>
+			<ion-fab-button (click)="filter('accepted')">
+				<ion-icon size="large" name="checkmark-done"></ion-icon>
+			</ion-fab-button>
+			<ion-fab-button (click)="filter('rejected')">
+				<ion-icon size="large" name="close"></ion-icon>
+			</ion-fab-button>
+		</ion-fab-list>
+	</ion-fab>	
 </ion-content>
