--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,7 @@
     --ion-color-tertiary-shade: #000000;
     --ion-color-tertiary-tint: #1a1a1a;
 
-    --ion-color-success: #292929;
+    --ion-color-success: #008e00;
     --ion-color-success-rgb: 41, 41, 41;
     --ion-color-success-contrast: #ffffff;
     --ion-color-success-contrast-rgb: 255, 255, 255;
@@ -63,7 +63,6 @@
     --ion-color-light-tint: #f5f6f9;
 
     --ion-color-body: #eef4f9;
-    --ion-color-green: #008e00;
 }
 
 @font-face {
